--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Lernantino</h1>
         <nav>
-            <a href="#">About me</a>
-            <a href="#">Work</a>
+            <a href="#about">About me</a>
+            <a href="#work">Work</a>
             <a href="#">Resume</a>
-            <a href="#">Contact Me</a>
+            <a href="#contact">Contact Me</a>
         </nav>
     </header>
 
